# TeleDrive-RS

./: .env.example  Cargo.toml  README.md
src/: main.rs
ui/: app.slint
