[package]
name = "telegram-cloud-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Telegram MTProto client
grammers-client = "0.8"
grammers-session = "0.8"
grammers-tl-types = "0.8"
grammers-mtsender = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# UI framework
slint = "1.3"

# File dialog
rfd = "0.13"

# Database (using JSON instead of SQLite to avoid conflicts with grammers-session)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
chrono = "0.4"
rand = "0.8"

[build-dependencies]
slint-build = "1.3"